# gh-cli-mcp-server

./: .gitignore  README.md  pyproject.toml
src/gh_cli_mcp_server/: __init__.py  server.py
src/gh_cli_mcp_server/commands/: alias.json  api.json  attestation.json  auth.json  autolink.json  browse.json  cache.json  codespace.json  config.json  deploy-key.json  extension.json  gist.json  gitignore.json  gpg-key.json  issue.json  label.json  license.json  org.json  pr.json  project.json  release.json  repo.json  ruleset.json  run.json  search.json  secret.json  ssh-key.json  status.json  variable.json  workflow.json
tests/: test_server.py
